objects/BigObjectTable__b.object
<CustomObject>
    <fields>
        <fullName>Index2__c</fullName>
        <label>Index2</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexField__c</fullName>
        <label>IndexField</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <indexes>
        <fullName>IndexField</fullName>
        <fields>
            <name>IndexField__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>IndexField</label>
    </indexes>
    <label>BigObjectTable</label>
    <pluralLabel>BigObjectTables</pluralLabel>
</CustomObject>